[package]
name = "rusty_algo_structs"
version = "0.1.0"
authors = ["Hunter Lester <guilfordhunter@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.3"

[[bench]]
name = "main_benchmark"
harness = false
